--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
     "@nestjs/swagger": "^11.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
+    "nestjs-pino": "^4.4.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.7",
