--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "NODE_ENV=local nest start",
+    "start:dev": "NODE_ENV=local nest start --watch",
+    "seed": "ts-node seed.ts seed",
+    "start:debug": "NODE_ENV=local nest start --debug --watch",
+    "start:prod": "NODE_ENV=local node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:cov": "NODE_ENV=test jest --coverage",
+    "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "test:e": "NODE_ENV=test jest *spec.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -29,6 +31,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
+    "joi": "^18.0.1",
+    "nest-commander": "^3.19.0",
     "nestjs-pino": "^4.4.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
@@ -49,6 +53,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.18.0",
     "@types/pg": "^8.15.5",
+    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -58,6 +63,7 @@
     "prettier": "^3.4.2",
     "sequelize-cli": "^6.6.3",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
